samples/_failures_safe/1761450733_f7fb63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ae55e4b.c: In function ‘main’:
./samples/SAFE/__tmp_0ae55e4b.c:153:12: error: missing terminating " character
  153 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_0ae55e4b.c:153:5: error: expected expression at end of input
  153 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_0ae55e4b.c:153:5: error: expected declaration or statement at end of input
